--- a/src/main/resources/application-mysql.yml
+++ b/src/main/resources/application-mysql.yml
@@ -1,12 +1,37 @@
 spring:
   datasource:
-    url: jdbc:mysql://${DATABASE_HOST:127.0.0.1}:${DATABASE_PORT:3306}/pascoa
+    url: jdbc:mysql://${DATABASE_HOST:127.0.0.1}:${DATABASE_PORT:3306}/pascoa_2
     username: ${DATABASE_USER:root}
     password: ${DATABASE_PASSWD:teste123456}
+    type: com.zaxxer.hikari.HikariDataSource
+    hikari:
+      pool-name: ps-demo
+      maximum-pool-size: 20
+      max-lifetime: 1800000
+      idle-timeout: 30000
+    tomcat:
+      initial-size: 5
+      max-wait: 20000
+      max-active: 50
+      max-idle: 15
+      min-idle: 8
+    
+    
   jpa:
-    database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
+    database-platform: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: ${DATABASE_UPDATE:update}
-    generate-ddl: true
+    generate-ddl: false
     show-sql: false
-    
+    task:
+    scheduling:
+      pool:
+        size: 10
+    properties:
+      hibernate:
+        format_sql: true
+        jdbc:
+          minPoolSize: 5
+          time_zone: America/Sao_Paulo
+        timezone:
+          default_storage: NORMALIZE_UTC
